--- a/camp-site.html
+++ b/camp-site.html
@@ -89,6 +89,10 @@
             margin: 5rem 3rem 1rem;
             text-align: right;
         }
+        
+        .back {
+            margin-top: 3rem;
+        }
     </style>
 </head>
 
@@ -102,6 +106,7 @@
             <li>無料</li>
             <li>飲用水なし</li>
             <li>webサイト -><a href="http://www.city.oshu.iwate.jp/keitai-kanko/view.rbz?nd=398&ik=1&pnp=397&pnp=398&cd=1501">http://www.city.oshu.iwate.jp/keitai-kanko/view.rbz?nd=398&ik=1&pnp=397&pnp=398&cd=1501</a>（岩手県奥州市の携帯サイト。PCサイトは見つけられなかった。）</li>
+            <li>似た名前のキャンプ場が山形もあるので注意</li>
         </ul>
     </div>
     <div>
@@ -163,9 +168,12 @@
         </ul>
     </div>
     <h2>2泊目</h2>
-    <div class="flex">追記します。
+    <div class="flex">追記します。</div>
+    <div class="back">
+        <a href="./">
+            ＜　戻 る</a>
     </div>
-    <footer>18/06/29/17</footer>
+    <footer>18/06/29/19</footer>
 </body>
 
 </html>
