--- a/index.html
+++ b/index.html
@@ -93,24 +93,24 @@
                         <div>
                             <h4>一日目</h4>
                             <div>
-                                <div class="time">7:07</div>
+                                <div class="time">7:00</div>
                                 <div>集合　西八王子駅改札前</div>
                             </div>
                             <div>
                                 <div class="time">...</div>
-                                <div style="display:inline">電車移動。車内で昼食　<a href="https://yahoo.jp/Lp-cmj">経路（Yahoo!路線情報）</a></div>
+                                <div style="display:inline">電車移動。車内で昼食　<a href="https://yahoo.jp/aYvmJ3">経路（Yahoo!路線情報）</a></div>
                             </div>
                             <div>
-                                <div class="time">16:44</div>
-                                <div>前沢駅着</div>
+                                <div class="time">14:54</div>
+                                <div>八乙女駅（地下鉄）着</div>
                             </div>
                             <div>
                                 <div class="time">...</div>
-                                <div>徒歩移動</div>
+                                <div>徒歩移動（2.3km）</div>
                             </div>
                             <div>
-                                <div class="time">18:10</div>
-                                <div>月山キャンプ場到着</div>
+                                <div class="time">15:22</div>
+                                <div>水の森キャンプ場到着</div>
                             </div>
                             <div>
                                 <div class="time">--:--</div>
@@ -136,8 +136,24 @@
                                 <div>未定</div>
                             </div>
                             <div>
-                                <div class="time">18:00</div>
-                                <div>山本公園（キャンプ場）到着</div>
+                                <div class="time">14:50</div>
+                                <div>桑折駅</div>
+                            </div>
+                            <div>
+                                <div class="time">...</div>
+                                <div>徒歩移動（5.2km）</div>
+                            </div>
+                            <div>
+                                <div class="time">16:00</div>
+                                <div>半田山自然公園（キャンプ場）到着</div>
+                            </div>
+                            <div>
+                                <div class="time">--:--</div>
+                                <div>設営、夕飯</div>
+                            </div>
+                            <div>
+                                <div class="time">--:--</div>
+                                <div>消灯</div>
                             </div>
                         </div>
                         <div>
@@ -148,7 +164,11 @@
                             </div>
                             <div>
                                 <div class="time">7:30</div>
-                                <div>月山キャンプ場出発</div>
+                                <div>半田山自然公園出発</div>
+                            </div>
+                            <div>
+                                <div class="time">--:--</div>
+                                <div>未定</div>
                             </div>
                             <div>
                                 <div class="time">18:00</div>
@@ -159,15 +179,51 @@
                 </div>
 
             </div>
+            <div class="content">
+                <h3>予算</h3>
+                <div class="flex">
+                    <table class="price-sheet">
+                        <tbody>
+                            <tr>
+                                <th>項目</th>
+                                <th>金額</th>
+                            </tr>
+                            <tr>
+                                <td>青春18きっぷ</td>
+                                <td>7110 ~ 11850（人数によって）</td>
+                            </tr>
+                            <tr>
+                                <td>地下鉄（長町～八乙女）</td>
+                                <td>330 × 2</td>
+                            </tr>
+                            <tr>
+                                <td>キャンプ場</td>
+                                <td>1100</td>
+                            </tr>
+                            <tr>
+                                <td>食事</td>
+                                <td>2000 ~ 10000</td>
+                            </tr>
+                            <tr>
+                                <td>雑費</td>
+                                <td>？</td>
+                            </tr>
+                            <tr>
+                                <td>計（概算）</td>
+                                <td>20,000くらい（隊からいくらか補助が出るそうです）</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
             <div class="camp-site content">
                 <h3>宿泊地について</h3>
                 <div class="flex">
                     <div>
-                        <div>行程には一応宿泊地を書きましかが、確定ではありません。他の人の意見も聞きたいと思っています。</div>
-                        <div>候補はまとめました。-><a href="./camp-site.html" target="_blank">宿泊地の候補</a></div>
+                        <div>1泊目のキャンプ場は確定です。</div>
+                        <div>2泊目のキャンプ場については、月曜日に自治体に電話して、詳細（高校生だけで泊まってよいか等）を確認して確定させます。</div>
                     </div>
                 </div>
-
             </div>
             <div class="content">
                 <h3>持ち物</h3>
@@ -180,8 +236,6 @@
                 <div class="flex">
                     <div>
                         <ul>
-                            <li>このプログラムの目的</li>
-                            <li>キャンプ場の確定、予約</li>
                             <li>行く場所を決める</li>
                             <li>持ち物を追記する</li>
                             <li>夕飯を決める</li>
@@ -196,7 +250,6 @@
                 <div class="flex">
                     <div>
                         <ul>
-                            <li>月山キャンプ場を使う場合、飲用水がないので持参します。</li>
                             <li>これは計画書ではありません。これをもとに作ります。</li>
                             <li>この時期の日の出は4:30ごろ、日の入りは19:00ごろだそうです。</li>
                         </ul>
@@ -206,8 +259,7 @@
             </div>
         </div>
     </div>
-
-    <footer class="time">18/06/29/19</footer>
+    <footer class="time">18/06/30/18</footer>
 </body>
 
 </html>
