--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             </div>
                             <div>
                                 <div class="time">7:30</div>
-                                <div>月山キャンプ場出発</div>
+                                <div>水の森キャンプ場出発</div>
                             </div>
                             <div>
                                 <div class="time">--:--</div>
